# webscraping_SergioSierra

./: .env  .env.example  Dockerfile.scraper  Dockerfile.web  README.md  Scraper.py  alembic.ini  docker-compose.yml  install-poetry.py  pyproject.toml  requirements.txt  test_import.py
alembic/: env.py  logging.conf  script.py.mako
test/: test_scraper.py
web_scraping_project/: app.py  database.py  filters.py  logging.conf  models.py  pagination.py  scheduler.py  scraper.py  search.py
web_scraping_project/static/: scripts.js  styles.css
web_scraping_project/templates/: index.html
