[tool.poetry]
name = "webscraping_sergiosierra"
version = "0.1.0"
description = "Proyecto de web scraping con PostgreSQL"
authors = ["Sergio Sierra <tu_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.1"
psycopg2-binary = "^2.9.6"
Flask = "^2.3.3"
alembic = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
